External API change documentation
